src/tests/ui/missing-main.vif
fn not_main() void {

}

//@ args: build
//@ stderr:
// error: declaration `main` does not exist in type `missing-main.vif`
//   --> target/debug/deps/std/rt.vif:9:10
//   |
// 9 |     root.main();
//   |          ^^^^
//
